--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,4 +21,4 @@ concurrency:
 
 jobs:
   static:
-    uses: from-static/actions/.github/workflows/static.yml@v1
+    uses: from-static/actions/.github/workflows/static.yml@main
